Edit non-javascript environment message

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>본 페이지는 자바스크립트를 사용하지 않는 환경에서 동작하지 않습니다. 자바스크립트를 켜주세요. 감사합니다.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
